# Portfolio

./: .gitignore  BACKEND_GUIDE.md  FRONTEND_GUIDE.md  README.md  SETUP.txt
backend/budget-tracker/: Dockerfile  app.py  data_loader.py  generate_report.py  nginx.conf  pyproject.toml  spending_pipeline.py  test_integration.py  test_report.py
backend/budget-tracker/report/: ai_client.py  orchestrator.py  recommender.py  scorer.py  theme.py
backend/budget-tracker/report/pages/: p00_cover.py  p01_summary.py  p02_trends.py  p03_categories.py  p04_merchants.py  p05_spend_type.py  p06_insights.py  p07_advanced.py  p08_cashflow.py  p09_advisor.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: About.jsx  ConsentModal.jsx  Footer.jsx  Gallery.jsx  Hero.jsx  Nav.jsx  SpendingTool.jsx  SpendingToolModal.jsx  Tools.jsx
